[package]
name = "test_showcase"
version = "0.1.0"
authors = ["Scott Chow <tehchowster@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["blocking", "json"] }
config = "0.9"
serde_json = "1.0"
serde = { version = "1.0.110", features = ["derive"] }